ci: setup tests